<resources>
    <string name="app_name">Midwest Pilot Cars</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="splash_title">Midwest \n Pilot Cars</string>
    <string name="login">Log In</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_map">Map</string>
    <string name="forgotten_password">Forgotten your Password?</string>
    <string name="message_forgot_password">Don\'t worry just type in your Registered Email address and we will take it from here.</string>
    <string name="hint_email">Enter Your email Address</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="text_new_jobs">New Jobs</string>
    <string name="text_ongoing_jobs">Ongoing Jobs</string>
    <string name="text_completed_job">Completed Jobs</string>
    <string name="add_new_job">Add new Job</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_complete_job">Completed Job</string>
    <string name="reset_password">Reset your password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_home">Overview</string>
    <string name="add_job">Add job</string>
    <string name="login_successful">User Logged in Successfully</string>
    <string name="login_unsuccessful">Invalid User Name and Password</string>
    <string name="error_field_empty">Field Can not be empty</string>
    <string name="progress_log_in">Loggin User In</string>
    <string name="select_date">Select Date</string>
    <string name="start_location">Start Location</string>
    <string name="driver_name">Driver Name</string>
    <string name="end_location">End Location</string>
    <string name="trcking_company">Trucking Co.</string>
    <string name="load_no">Load No </string>
    <string name="dot_no">Dot No </string>
    <string name="truck_number">Truck No</string>
    <string name="load_description">Load Description</string>
    <string name="load_type">Load Type</string>
    <string name="cash_advance">Cash In Advance</string>
    <string name="title_new_job">Add New Job</string>
    <string name="view_job">View Job</string>
    <string name="truck_height">Truck Height (in inches)</string>
    <string name="truck_width">Truck Width (in inches)</string>
    <string name="truck_driver_number">Truck Driver Phone Number</string>
    <string name="select_load_type">Select Load Type</string>
    <string name="select_truck_company">Select Truck Company</string>
    <string name="type_in_your_location">Type in your Location</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="place_id">Place ID</string>
    <string name="url">URL</string>
    <string name="utc_offset">UTC Offset</string>
    <string name="vicinity">Vicinity</string>
    <string name="compound_code">Compound Code</string>
    <string name="global_code">Global Code</string>
    <string name="auth_failure">You are logged from the device. Please login again</string>
    <string name="start_date">Start Date</string>
    <string name="start_job">Start</string>
    <string name="empty_field">Please fill out all required fields</string>
    <string name="enter_email_address">Please enter email address to reset your password</string>
    <string name="user_name_not_exist">Username does not exist</string>
    <string name="old_password">Old password</string>
    <string name="password_not_match">New password does not match with confirm password</string>
    <string name="wrong_password">Password is not valid</string>
    <string name="odo_meter_reading">Odometer Reading</string>
    <string name="per_mile_cost">Per Mile Cost</string>
    <string name="per_day_cost">Per Day Rate</string>
    <string name="no_go_day_rate">No Go Day Rate</string>
    <string name="add_comment">Add Comment</string>
    <string name="detention_price">Detention Price</string>
    <string name="empty_date">Date can not be empty</string>
    <string name="empty_load_type">Please select load type</string>
    <string name="empty_odo_meter">Please enter Odometer Reading</string>
    <string name="empty_start_location">Please enter start location of the job</string>
    <string name="empty_per_mile">Please enter per mile cost</string>
    <string name="empty_per_day">Please enter per day cost</string>
    <string name="empty_no_go_day">Please enter No Go Day cost</string>
    <string name="empty_detention_price">Please enter per detention cost</string>
    <string name="pick_image">Choose Picture from</string>
    <string name="starting_job">Starting Job...</string>
    <string name="empty_start_location_coordinates">Start Job Location Not Found</string>
    <string name="job_alredy_in_progress">One Job already in progress</string>
    <string name="option_cash">Cash</string>
    <string name="option_card">Card</string>
    <string name="no_down_town">No Of Down Time Hours</string>
    <string name="miles_travelled">No of Miles Travelled</string>
    <string name="no_go_day">No Go Day</string>
    <string name="choose_costing">Choose Billing Method</string>
    <string name="option_miles_travelled">Miles Travelled</string>
    <string name="option_per_day_cost">Per Day Cost</string>
    <string name="end_job">End Job</string>
    <string name="next">Next</string>
    <string name="next_day">Next Day</string>
    <string name="gas_expenses">Gas Expenses</string>
    <string name="motel_expenses">Motel Expenses</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="no_internet">You are not connected to Internet. Please Try again Later</string>
    <string name="no_data_available">No Data</string>
    <string name="invoice_pending">Invoice generation is still pending from Admin!</string>
    <string name="job_complete_done">Job completion done Data!</string>
    <string name="loading">Loading ... </string>
    <string name="down_time_hour">No Of Down Time Hours</string>
    <string name="mile_travelled">Miles Travelled</string>
    <string name="no_days">No Go Day</string>
    <string name="mile_travell">Miles Travelled</string>
    <string name="per_day_rate">Per Day Cost</string>
    <string name="title_day">Day One</string>
    <string name="end_form">End Form</string>
    <string name="end_date">End Date/Time</string>
    <string name="job_id">Job ID</string>
    <string name="no_goes">No.of No goes</string>
    <string name="signature_owner">Signature of Pilot Car Driver</string>
    <string name="signature_client">Signature of Client (Truck Driver)</string>
    <string name="back_trip">Back Trip</string>
    <string name="advance_cash">Cash Advance</string>
    <string name="give_back">Give Back</string>
    <string name="next_job">Take for Next Job</string>
    <string name="day_expense">Day Expense Data as per the job_id!</string>
    <string name="per_data">Day Expense Data as per the job_id!</string>
    <string name="extra_pay">Extra Pay</string>
    <string name="truck_weight">Truck Weight (in lbs)</string>
    <string name="truck_length">Truck Length (in inches)</string>
    <string name="add_more">Add More</string>
    <string name="motel_expenses_more">Motel Expense More</string>
    <string name="other_expenses_more">Other Expense More</string>
    <string name="gas_expenses_more">Gas Expense More</string>
    <string name="mini">Mini</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Amount</string>
    <string name="start_job_activity">Start Job</string>
    <string name="signature">Signature</string>
    <string name="wallet">Wallet</string>
    <string name="title_wallet">Wallet</string>
    <string name="request_for_amount">Please enter require amount</string>
    <string name="enter_amount_require">Please enter require amount</string>
    <string name="get_wallet">Wallet Data as per the DRIVER!</string>
    <string name="detail">(Details)</string>
    <string name="wallet_amount_success">Wallet amount request successfully submitted!</string>
    <string name="start_location_select">Start location can not be empty</string>
    <string name="approx_amount">Approx Total Amount Pay To Driver</string>
    <string name="get_approx_amount">Driver approx earning daata as per the Job_id!</string>
    <string name="job_comment">Job Comment</string>
    <string name="empty_odo_meter_image">Odometer Reading image can not be empty</string>
    <string name="gas_image_empty">Please upload the gas expense image.</string>
    <string name="motel_image_empty">Please upload the motel expense image.</string>
    <string name="other_image_empty">Please upload the other expense image.</string>
    <string name="gas_empty">Gas expenses field can not be empty</string>
    <string name="down_time_empty">Down time hours field can not be empty.</string>
    <string name="miles_empty">Miles Travelled field can not be empty.</string>
    <string name="sign_driver">This is not an invoice,this is to confirm, the trip details are correct.</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="driver_position">Driver Position</string>
    <string name="enable_permission">Please allow call phone permission.Go goto your App permissions and allow phone/telephone permission.</string>
    <string name="empty_error">Field can not be empty</string>
    <string name="start_date_time">Start Date/Time</string>
    <string name="select_date_lesser">job start date should be greater and equal to assign date</string>
    <string name="title_client_sign">Alert!</string>
    <string name="total_day_rate"><b>Total Day Rate</b></string>
    <string name="total_down_time"><b>Total Down Time Hours</b></string>
    <string name="total_motel_expense"><b>Total Motel Expense</b></string>
    <string name="total_gas_expense"><b>Total Gas Expense</b></string>
    <string name="total_other_expense"><b>Total Other Expense</b></string>
    <string name="main_total_day"><b>Main Total Day Expense</b></string>
    <string name="main_total_price"><b>Main Total Price</b></string>
    <string name="main_total_down"><b>Main Total Down Time Price</b></string>
    <string name="main_total_card"><b>Main Total Card Expense</b></string>
    <string name="main_extra_pay"><b>Main Extra Pay To Driver</b></string>
    <string name="total_pay_driver"><b>Total Pay To Driver</b></string>
    <string name="day_rate">Job Day Rate</string>
    <string name="no_go_price">No Go Price</string>
    <string name="per_mile">Per Mile</string>
    <string name="total_pay_per_mile">Total-Pay Per Mile</string>
    <string name="total_day_rate_pay">Total-Day Rate Pay</string>
    <string name="total_mini_pay">Total-Mini Pay</string>
    <string name="total_down_time_pay">Total Down Time Pay</string>
    <string name="total_motel_expense_card">Total Motel Expense (CC)</string>
    <string name="total_motel_expense_cash">Total Motel Expense (Cash)</string>
    <string name="total_gas_expense_card">Total Gas Expense (CC)</string>
    <string name="total_gas_expense_cash">Total Gas Expense (Cash)</string>
    <string name="verify"><u>Confirm</u></string>
</resources>