<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/et_motel_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@null"
        android:drawablePadding="5dp"
        android:editable="false"
        android:hint="@string/advance_cash"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/img_camera_motel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="110dp"
        android:layout_toLeftOf="@id/tv_motel_comment"
        android:clickable="true"
        android:visibility="gone"
        android:elevation="5dp"
        android:focusable="true"
        android:src="@drawable/ic_photo_camera" />

    <TextView
        android:id="@+id/tv_motel_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:visibility="gone"
        android:drawableTop="@drawable/ic_plus_symbol"
        android:text="@string/add_comment"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/option_group_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_motel_expenses"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/option_give_radio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/give_back" />

        <RadioButton
            android:id="@+id/option_take_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_job" />
    </RadioGroup>

    <EditText
        android:id="@+id/cash_amount_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/option_group_cash"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        android:maxLength="10"
        android:drawableLeft="@mipmap/dollar"
        android:inputType="number"
        android:background="@drawable/mask_2"
        android:singleLine="true"
         />

    <TextView
        android:id="@+id/verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="-35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_below="@id/cash_amount_edittext"
        android:text="@string/verify"/>

    <TextView
        android:id="@+id/approx_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/verify_button"
        android:text="@string/approx_amount"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/wallet_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/approx_amount"
        android:text="@string/wallet_amount"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/pending_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/wallet_amount"
        android:text="@string/pending_amount"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
</RelativeLayout>
</layout>