<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center_vertical">

    <EditText
        android:id="@+id/et_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="5dp"
        android:editable="false"
        android:hint="@string/select_date"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/img_camera_odo_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="110dp"
        android:layout_toLeftOf="@id/et_date_comment"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:src="@drawable/ic_photo_camera" />

    <TextView
        android:id="@+id/tv_miles_travelled_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:drawableTop="@drawable/ic_plus_symbol"
        android:text="@string/add_comment"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/option_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_date_comment"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/option_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_cash" />

        <RadioButton
            android:id="@+id/option_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_card" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_date_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_select_date"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        android:background="@drawable/mask_2"
        android:maxLines="3"
        android:minLines="3"
        android:visibility="gone" />

</RelativeLayout>