<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/et_motel_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@null"
        android:drawablePadding="5dp"
        android:editable="false"
        android:hint="@string/end_job"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/end_form_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="110dp"
        android:gravity="center_vertical"
        android:layout_toLeftOf="@id/tv_motel_comment" />

    <ImageView
        android:id="@+id/img_camera_motel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="110dp"
        android:layout_toLeftOf="@id/tv_motel_comment"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:src="@drawable/ic_photo_camera" />

    <TextView
        android:id="@+id/tv_motel_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:text="@string/add_comment"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/option_group_motel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_motel_expenses"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/option_cash_motel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_cash" />

        <RadioButton
            android:id="@+id/option_card_motel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_card" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_motel_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/option_group_motel"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        android:background="@drawable/mask_2"
        android:maxLines="3"
        android:minLines="3"
        android:visibility="gone" />
</RelativeLayout>
